# homework_12.2_dop

./: .gitignore  README.md  pyproject.toml
tests/: test_dicts.py  test_divide_func.py  test_list_func.py
utils/: dicts.py  divide_func.py  list_func.py
