[tool.poetry]
name = "homework-12-2-dop"
version = "0.1.0"
description = ""
authors = ["Valera Demin <wahrwolffe@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_12"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.1"


[tool.poetry.group.develop.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
